crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@144.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE FUNCTION test1 (int) RETURNS int LANGUAGE SQL\n    AS 'a', 'b';"
---
CreateFunctionStmt@0..69
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Function@7..15 "FUNCTION"
  Whitespace@15..16 " "
  Ident@16..21 "test1"
  Whitespace@21..22 " "
  Ascii40@22..23 "("
  FunctionParameter@23..26
    TypeName@23..26
      IntP@23..26 "int"
  Ascii41@26..27 ")"
  Whitespace@27..28 " "
  Returns@28..35 "RETURNS"
  Whitespace@35..36 " "
  TypeName@36..39
    IntP@36..39 "int"
  Whitespace@39..40 " "
  DefElem@40..52
    Language@40..48 "LANGUAGE"
    Whitespace@48..49 " "
    SqlP@49..52 "SQL"
  Newline@52..53 "\n"
  Whitespace@53..57 "    "
  DefElem@57..68
    As@57..59 "AS"
    Whitespace@59..60 " "
    List@60..68
      Sconst@60..63 "'a'"
      Ascii44@63..64 ","
      Whitespace@64..65 " "
      Sconst@65..68 "'b'"
  Ascii59@68..69 ";"

