crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE SCHEMA temp_func_test;
---
CreateSchemaStmt@0..29
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Schema@7..13 "SCHEMA"
  Whitespace@13..14 " "
  Ident@14..28 "temp_func_test"
  Ascii59@28..29 ";"

