crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@27.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT proname, prosecdef FROM pg_proc\n       WHERE oid in ('functest_C_1'::regproc,\n                     'functest_C_2'::regproc,\n                     'functest_C_3'::regproc) ORDER BY proname;"
---
SelectStmt@0..194
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..14
    ColumnRef@7..14
      Ident@7..14 "proname"
  Ascii44@14..15 ","
  Whitespace@15..16 " "
  ResTarget@16..25
    ColumnRef@16..25
      Ident@16..25 "prosecdef"
  Whitespace@25..26 " "
  From@26..30 "FROM"
  Whitespace@30..31 " "
  RangeVar@31..38
    Ident@31..38 "pg_proc"
  Newline@38..39 "\n"
  Whitespace@39..46 "       "
  Where@46..51 "WHERE"
  Whitespace@51..52 " "
  AExpr@52..175
    ColumnRef@52..55
      Ident@52..55 "oid"
    Whitespace@55..56 " "
    InP@56..58 "in"
    Whitespace@58..59 " "
    Ascii40@59..60 "("
    List@60..175
      TypeCast@60..83
        AConst@60..74
          Sconst@60..74 "'functest_C_1'"
        Typecast@74..76 "::"
        TypeName@76..83
          Ident@76..83 "regproc"
      Ascii44@83..84 ","
      Newline@84..85 "\n"
      Whitespace@85..106 "                     "
      TypeCast@106..129
        AConst@106..120
          Sconst@106..120 "'functest_C_2'"
        Typecast@120..122 "::"
        TypeName@122..129
          Ident@122..129 "regproc"
      Ascii44@129..130 ","
      Newline@130..131 "\n"
      Whitespace@131..152 "                     "
      TypeCast@152..175
        AConst@152..166
          Sconst@152..166 "'functest_C_3'"
        Typecast@166..168 "::"
        TypeName@168..175
          Ident@168..175 "regproc"
  Ascii41@175..176 ")"
  Whitespace@176..177 " "
  SortBy@177..193
    Order@177..182 "ORDER"
    Whitespace@182..183 " "
    By@183..185 "BY"
    Whitespace@185..186 " "
    ColumnRef@186..193
      Ident@186..193 "proname"
  Ascii59@193..194 ";"

