crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@30.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT proname, proleakproof FROM pg_proc\n       WHERE oid in ('functest_E_1'::regproc,\n                     'functest_E_2'::regproc) ORDER BY proname;"
---
SelectStmt@0..151
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..14
    ColumnRef@7..14
      Ident@7..14 "proname"
  Ascii44@14..15 ","
  Whitespace@15..16 " "
  ResTarget@16..28
    ColumnRef@16..28
      Ident@16..28 "proleakproof"
  Whitespace@28..29 " "
  From@29..33 "FROM"
  Whitespace@33..34 " "
  RangeVar@34..41
    Ident@34..41 "pg_proc"
  Newline@41..42 "\n"
  Whitespace@42..49 "       "
  Where@49..54 "WHERE"
  Whitespace@54..55 " "
  AExpr@55..132
    ColumnRef@55..58
      Ident@55..58 "oid"
    Whitespace@58..59 " "
    InP@59..61 "in"
    Whitespace@61..62 " "
    Ascii40@62..63 "("
    List@63..132
      TypeCast@63..86
        AConst@63..77
          Sconst@63..77 "'functest_E_1'"
        Typecast@77..79 "::"
        TypeName@79..86
          Ident@79..86 "regproc"
      Ascii44@86..87 ","
      Newline@87..88 "\n"
      Whitespace@88..109 "                     "
      TypeCast@109..132
        AConst@109..123
          Sconst@109..123 "'functest_E_2'"
        Typecast@123..125 "::"
        TypeName@125..132
          Ident@125..132 "regproc"
  Ascii41@132..133 ")"
  Whitespace@133..134 " "
  SortBy@134..150
    Order@134..139 "ORDER"
    Whitespace@139..140 " "
    By@140..142 "BY"
    Whitespace@142..143 " "
    ColumnRef@143..150
      Ident@143..150 "proname"
  Ascii59@150..151 ";"

