crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@46.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE FUNCTION functest_F_3(int) RETURNS bool LANGUAGE 'sql'\n       RETURNS NULL ON NULL INPUT AS 'SELECT $1 < 50';"
---
CreateFunctionStmt@0..116
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Function@7..15 "FUNCTION"
  Whitespace@15..16 " "
  Ident@16..28 "functest_F_3"
  Ascii40@28..29 "("
  FunctionParameter@29..32
    TypeName@29..32
      IntP@29..32 "int"
  Ascii41@32..33 ")"
  Whitespace@33..34 " "
  Returns@34..41 "RETURNS"
  Whitespace@41..42 " "
  TypeName@42..46
    Ident@42..46 "bool"
  Whitespace@46..47 " "
  DefElem@47..61
    Language@47..55 "LANGUAGE"
    Whitespace@55..56 " "
    Sconst@56..61 "'sql'"
  Newline@61..62 "\n"
  Whitespace@62..69 "       "
  DefElem@69..76
    Returns@69..76 "RETURNS"
  Whitespace@76..77 " "
  NullP@77..81 "NULL"
  Whitespace@81..82 " "
  On@82..84 "ON"
  Whitespace@84..85 " "
  NullP@85..89 "NULL"
  Whitespace@89..90 " "
  InputP@90..95 "INPUT"
  Whitespace@95..96 " "
  DefElem@96..115
    As@96..98 "AS"
    Whitespace@98..99 " "
    List@99..115
      Sconst@99..115 "'SELECT $1 < 50'"
  Ascii59@115..116 ";"

